# gridwalk

./: .dockerignore  .eslintrc.json  .gitignore  DATA_MODEL.md  Dockerfile  README.md  docker-compose.yaml  makefile  martin.yaml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: build_to_ecr.yaml
backend/: Cargo.toml
backend/src/: app_state.rs  auth.rs  config.rs  lib.rs  main.rs  routes.rs  server.rs
backend/src/core/: common.rs  connector.rs  layer.rs  mod.rs  org.rs  session.rs  team.rs  user.rs  workspace.rs
backend/src/data/: config.rs  mod.rs
backend/src/data/dynamodb/: config.rs  conversions.rs  mod.rs
backend/src/routes/: connector.rs  layer.rs  mod.rs  os_token.rs  tiles.rs  user.rs  workspace.rs
frontend/: Dockerfile  next.config.mjs  package.json
frontend/public/: style.json
frontend/src/: middleware.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
gridwalk-backend/: .env  Cargo.toml  Dockerfile
gridwalk-backend/migrations/: 01_initial.sql
gridwalk-backend/src/: app_state.rs  auth.rs  error.rs  main.rs  server.rs  utils.rs
gridwalk-backend/src/connector/: connection.rs  connector.rs  endpoints.rs  mod.rs  postgis.rs
gridwalk-backend/src/core/: connector.rs  layer.rs  mod.rs  project.rs  user.rs  workspace.rs
gridwalk-backend/src/data/: config.rs  mod.rs
gridwalk-backend/src/data/dynamodb/: config.rs  conversions.rs  mod.rs  session.rs
gridwalk-backend/src/data/postgres/: base.rs  mod.rs  sessionstore.rs  userstore.rs
gridwalk-backend/src/data/postgres/migrations/: 20250407222613_initial.sql  V1__initial.sql
gridwalk-backend/src/datastore/: active_connection.rs  core.rs  endpoints.rs  mod.rs
gridwalk-backend/src/layer/: endpoints.rs  endpoints_v2.rs  layer.rs  mod.rs
gridwalk-backend/src/map/: core.rs  endpoints.rs  mod.rs  tiles.rs
gridwalk-backend/src/project/: endpoints.rs  mod.rs  project.rs  tiles.rs
gridwalk-backend/src/routes/: connector.rs  layer.rs  layer_v2.rs  mod.rs  project.rs  tiles.rs  user.rs  workspace.rs
gridwalk-backend/src/session/: session.rs
gridwalk-backend/src/user/: endpoints.rs  mod.rs  user.rs
gridwalk-backend/src/workspace/: endpoints.rs  mod.rs  workspace.rs  workspace_member.rs
gridwalk-product/: README.md  package-lock.json  package.json
gridwalk-ui/: NEXTSTEPS.md  README.md  next.config.ts  package-lock.json  package.json
gridwalk-ui/public/: OS_VTS_3857_Dark.json  OS_VTS_3857_Light.json
gridwalk-ui/src/: middleware.ts
public/: OS_VTS_3857_Road.json
src/: middleware.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/components/: connectionsModal.tsx  modal.tsx  sidebar.tsx
src/utils/: data.ts  dynamoDB.ts  fileHandler.ts  mapHandler.ts  sidebarHandler.ts
test_files/: test.json
(+188 files in other folders)
