[package]
name = "gridwalk-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7.5", features = ["macros"] }
martin = { git = "https://github.com/enmeshed-analytics/martin.git", features = ["postgres"] }
martin-tile-utils = { git = "https://github.com/enmeshed-analytics/martin.git" }
rustls = { version = "0.23.13", features = ["std"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
