[package]
name = "gridwalk-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1.83"
aws-config = "1.5.7"
aws-sdk-dynamodb = "1.48"
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
base64 = "0.22.1"
deadpool-postgres = "0.14.0"
dotenvy = "0.15.7"
duckdb-postgis = "0.1.11"
futures = "0.3"
geozero = { version = "0.14.0", features = [
    "with-postgis-postgres",
    "with-postgis-sqlx",
    "with-mvt",
] }
http = "1.2.0"
native-tls = "0.2"
postgres-native-tls = "0.5"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.12", features = ["json"] }
rustls = { version = "0.23.13", features = ["std"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "json"] }
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.12"
tower-cookies = "0.10.0"
tower-http = { version = "0.5", features = ["trace", "cors", "limit"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.2"
uuid = { version = "1.16.0", features = ["v4"] }
